# screeninfo

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: build.yml  lint.yml  test.yml
screeninfo/: __init__.py  __main__.py  common.py  cygwin.py  drm.py  monitor.py  osx.py  screeninfo.py  test_documentation.py  test_screeninfo.py  util.py  utils.py  windows.py  x11.py
screeninfo/enumerators/: __init__.py  cygwin.py  drm.py  osx.py  windows.py  x11.py  xinerama.py  xrandr.py
tests/: test_documentation.py
