[metadata]
name = screeninfo
version = 0.7
url = https://github.com/rr-/screeninfo
author = Marcin Kurczewski
author_email = rr-@sakuya.pl
description = "Fetch location and size of physical screens.",
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE.md
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Desktop Environment
    Topic :: System :: Operating System

[options]
python_requires = >=3.6
package_dir = screeninfo=screeninfo
packages = find:
install_requires =
    dataclasses; python_version<"3.7"
    Cython; sys_platform=="darwin"
    pyobjc-framework-Cocoa; sys_platform=="darwin"

[options.package_data]
screeninfo = py.typed

[options.extras_require]
test =
    pytest
    black
